--- a/project-1/src/main/webapp/css/main.css
+++ b/project-1/src/main/webapp/css/main.css
@@ -1,7 +1,7 @@
 @import "reset.css";
 @import"./index.css";
 @import "home.css";
-
+@import "manager-home.css";
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
