--- a/project-1/src/main/webapp/css/home.css
+++ b/project-1/src/main/webapp/css/home.css
@@ -38,11 +38,19 @@ header h1 {
 
 #option {
     display: inline-block;
-    width: 25%;
+    width: 15%;
     margin: 20px;
     transition: 0.2s ease-in-out;
 }
 
+#option:nth-child(1),
+#option:nth-child(4) {
+    vertical-align: top;
+}
+.disabled{
+	pointer-events: none;
+	opacity: 0.5;
+}
 #option .fas {
     display: block;
     text-align: center;
