--- a/project-1/src/main/webapp/css/main.css
+++ b/project-1/src/main/webapp/css/main.css
@@ -2,6 +2,7 @@
 @import"./index.css";
 @import "home.css";
 @import "manager-home.css";
+
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
@@ -9,6 +10,7 @@
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 @keyframes fadeIn {
