--- a/project-1/src/main/webapp/css/home.css
+++ b/project-1/src/main/webapp/css/home.css
@@ -1,5 +1,3 @@
-
-
 * {
     font-family: 'Roboto', sans-serif;
     color: black;
@@ -99,4 +97,59 @@ footer nav ul li::after {
 footer nav ul li a,
 footer nav ul li span {
     color: white;
+}
+
+.modal{
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-contents{
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+}
+.modal-contents h2{
+	font-weight: bold;
+	font-size: 1.5rem;
+    margin: 20px auto;
+    letter-spacing: 2px;
+}
+.myHelp{
+	line-height: 1.5;
+}
+.myHelp strong{
+	font-weight: bold;
+}
+.myHelp a{
+	transition: 0.4s ease-in-out;
+}
+.myHelp a:hover{
+	text-decoration: underline;
+	color: #d82111;
+}
+.close{
+	color: #aaa;
+    float: right;
+    width: 100%;
+    text-align: right;
+    font-size: 2rem;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
+}
+.close:hover,
+.close:focus{
+	color: #d82111;
+	-webkit-text-stroke: thin black;
+	text-decoration: none;
+	cursor: pointer;
 }
