began setup for finance manager user stories

--- a/project-1/src/main/webapp/css/home.css
+++ b/project-1/src/main/webapp/css/home.css
@@ -20,6 +20,11 @@ header h1 {
     letter-spacing: 2px;
 }
 
+header p {
+    font-size: 1.5rem;
+    margin: 20px;
+}
+
 #option-container {
     display: block;
     float: left;
