--- a/project-1/src/main/webapp/css/profile.css
+++ b/project-1/src/main/webapp/css/profile.css
@@ -63,3 +63,11 @@ input[type="submit"]:hover
     color: white;
     text-decoration: underline;
 }
+
+#admin-message{
+	margin: 0 20px;
+	font-weight: 300;
+	font-size: 0.8rem;
+	line-height: 2;
+	font-style: italic;
+}
