--- a/project-1/src/main/webapp/css/home.css
+++ b/project-1/src/main/webapp/css/home.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Roboto', sans-serif;
-    color: black;
 }
 
 html,
@@ -18,11 +17,13 @@ header h1 {
     font-size: 3rem;
     margin: 20px;
     letter-spacing: 2px;
+    color: #F2F4F3 !important;
 }
 
 header p {
     font-size: 1.5rem;
     margin: 20px;
+    color: #F2F4F3 !important;
 }
 
 #option-container {
@@ -59,6 +60,8 @@ header p {
     text-align: center;
     font-size: 5rem;
     margin-bottom: 30px;
+    color: #F2F4F3 !important;
+    -webkit-text-stroke: thin black;
 }
 
 #option a {
@@ -104,6 +107,13 @@ footer nav ul li span {
     color: white;
 }
 
+footer nav ul li a{
+	transition: 0.4s ease-in-out;
+}
+footer nav ul li a:hover{
+	color: #2E7BC8;
+	text-decoration: underline;
+}
 .modal{
 	display: none;
 	position: fixed;
