--- a/project-1/src/main/webapp/css/view-pending.css
+++ b/project-1/src/main/webapp/css/view-pending.css
@@ -1,104 +1,44 @@
 @charset "ISO-8859-1";
 
-*{
+* {
 	box-sizing: border-box;
+	font-family: 'Roboto', sans serif;
 }
 
-input:focus, button:focus,
-textarea:focus{
+input:focus, button:focus, textarea:focus {
 	outline: none !important;
 }
 
-html,body{
-	height: 100%;
+.menu {
+	display: none;
 }
 
 body {
-	color: #fff;
-	margin: 0;
-	background: linear-gradient(45deg, #a0499d, #cc0e0e);
-	background-repeat: no-repeat;
-	font-family: "Roboto", sans-serif;
-	font-weight: 100;
+	background: rgb(94,184,229); /* Old browsers */
+	background: -moz-linear-gradient(left, rgba(94,184,229,1) 0%, rgba(46,123,200,1) 50%, rgba(43,54,104,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(94,184,229,1) 0%,rgba(46,123,200,1) 50%,rgba(43,54,104,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(94,184,229,1) 0%,rgba(46,123,200,1) 50%,rgba(43,54,104,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-
 span{
 	display: inline;
 	font-weight: 500;
 	font-size: 1.2rem;
+	color: #2D2D61 !important;
 }
 
 .title{
+	color: #2D2D61 !important;
+	font-weight: 300 !important;
 	line-height: 2;
 	margin: 20px;
-	font-weight: 500;
 	font-size: 1.5rem;
 	letter-spacing: 2px;
 }
-.container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
 
 #header{
 	margin: 20px;
 }
 
-#author-id{
-	float: left;
-	width: 50%;
-}
-
-#author-id:after{
-	content: "";
-	clear: both;
-	display: table;
-}
-
-table {
-	width: 800px;
-	max-width: 1300px;
-	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-}
-
-th,
-td {
-	padding: 10px;
-	background-color: rgba(255,255,255,0.2);
-	color: #fff;
-}
-
-th {
-	text-align: center;
-}
-
-thead th {
-	background-color: #2a0b29;
-}
-
-tbody tr:hover {
-	background-color: rgba(255,255,255,0.3);
-}
-tbody td {
-	position: relative;
-	text-align: center;
-}
-tbody td:hover:before {
-	content: "";
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: -9999px;
-	bottom: -9999px;
-	background-color: rgba(255,255,255,0.2);
-	z-index: -1;
-			
-}
 
 button{
     margin: 10px 20px;
@@ -123,23 +63,141 @@ button:after{
 	display: table;
 }
 
-/*MENU CSS CODE*/
-.menu{
-	display: none; /*disabled for now*/
-	position: absolute;
-    top: 50px;
-    right: 20px;
-    padding: 20px 20px;
-    width: 50px;
-    height: 50px;
-    font-size: 13px;
-    font-family: 'Roboto', sans serif;
-    font-weight: 700;
-    white-space: nowrap;
-    color: #464448;
-    overflow: hidden;
-    background: #efefef;
-    border-radius: 50%;
-    box-shadow: 0 3px 10px -2px rgba(255, 255, 255, 0.25);
-    transition: 0.2s;
+table {
+	width: 100%;
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+table td, table th {
+	background-color: rgba(255,255,255,0.2);
+	color: #2b686e;
+	padding: 10px;
+}
+
+table td {
+	text-align: center;
+	vertical-align: middle;
+}
+
+table td:last-child {
+	font-size: 0.95em;
+	line-height: 1.4;
+	text-align: left;
+}
+
+table th {
+	background-color: #daeff1;
+	font-weight: 300;
+}
+
+table tr:nth-child(2n) {
+	background-color: white;
+}
+
+table tr:nth-child(2n+1) {
+	background-color: #edf7f8;
+}
+
+tbody tr:hover {
+	background-color: rgba(255,255,255,0.3);
+}
+
+@media screen and (max-width: 700px) {
+	table, tr, td {
+		display: block;
+	}
+	td:first-child {
+		position: absolute;
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		transform: translateY(-50%);
+		width: 100px;
+	}
+	td:not (:first-child ) {
+		clear: both;
+		margin-left: 100px;
+		padding: 4px 20px 4px 90px;
+		position: relative;
+		text-align: left;
+	}
+	td:not (:first-child ):before {
+		color: #91ced4;
+		content: '';
+		display: block;
+		left: 0;
+		position: absolute;
+	}
+	td:nth-child(2):before {
+		content: 'Name:';
+	}
+	td:nth-child(3):before {
+		content: 'Email:';
+	}
+	td:nth-child(4):before {
+		content: 'Phone:';
+	}
+	td:nth-child(5):before {
+		content: 'Comments:';
+	}
+	tr {
+		padding: 10px 0;
+		position: relative;
+	}
+	tr:first-child {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.header {
+		background-color: transparent;
+		color: white;
+		font-size: 2em;
+		font-weight: 700;
+		padding: 0;
+		text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+	}
+	img {
+		border: 3px solid;
+		border-color: #daeff1;
+		height: 100px;
+		margin: 0.5rem 0;
+		width: 100px;
+	}
+	td:first-child {
+		background-color: #c8e7ea;
+		border-bottom: 1px solid #91ced4;
+		border-radius: 10px 10px 0 0;
+		position: relative;
+		top: 0;
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+		width: 100%;
+	}
+	td:not (:first-child ) {
+		margin: 0;
+		padding: 5px 1em;
+		width: 100%;
+	}
+	td:not (:first-child ):before {
+		font-size: .8em;
+		padding-top: 0.3em;
+		position: relative;
+	}
+	td:last-child {
+		padding-bottom: 1rem !important;
+	}
+	tr {
+		background-color: white !important;
+		border: 1px solid #6cbec6;
+		border-radius: 10px;
+		box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+		margin: 0.5rem 0;
+		padding: 0;
+	}
+	.table-users {
+		border: none;
+		box-shadow: none;
+		overflow: visible;
+	}
 }
