connected api to aws rds database

--- a/project-1/src/main/webapp/css/main.css
+++ b/project-1/src/main/webapp/css/main.css
@@ -43,7 +43,7 @@ a {
 }
 .loading{
 	border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #d82111; /* Blue */
+    border-top: 16px solid #1e2442; /* Blue */
   	border-radius: 50%;
   	width: 120px;
   	height: 120px;
